# fastapi-with-ai

./: Makefile  langgraph.json  pyproject.toml
app/: main.py
app/ai/agents/: orchestrator.py
app/ai/controller/: ai_controller.py
app/ai/prompts/: comment_aget_prompt.py  general_subject_agent_prompt.py  orchestrator_prompt.py  summarize_prompt.py  supervisor_prompt.py
app/ai/shared/: summarize_node.py
app/ai/utils/: format_history.py  hitl_wrapper.py  token_generator.py
app/auth/controller/: auth_controller.py
app/auth/schema/: token.py
app/auth/use_cases/: create_access_token_use_case.py  get_current_user_use_case.py  login_use_case.py  refresh_token_use_case.py  validate_credentials_use_case.py  verify_user_credentials_use_case.py
app/comments/controller/: comment_controller.py
app/comments/model/: comment.py
app/comments/repository/: comment_repository.py
app/comments/schema/: comment_schema.py
app/comments/use_cases/: create_comment_use_case.py  delete_comment_use_case.py  get_all_comments_use_case.py  get_comment_by_id.py  (+1 more)
app/core/: config.py
app/db/: session.py
app/http_request/: http_request.py
app/utils/: crud_factory.py  security.py
migration/: env.py
migration/versions/: 09e7e9c6613b_adding_posts_and_comments.py  60b271139ce6_adding_title_to_posts.py  702f78a17651_adding_posts_and_comments.py  7a640e01848f_added_is_active_and_role_to_user_2.py  b3c155153407_initial_version.py  b611a9f333c7_creating_users.py  faf985ec12bf_initial_version.py
tests/: conftest.py  test_db.py
tests/units/: test_security.py
(+30 files in other folders)
